--- a/Serverside/.env
+++ b/Serverside/.env
@@ -1,6 +1,10 @@
 PORT = 3000 
 JWT_EXPIRATION = "3h"
 JWT_SECRET = HVAC-secrete
-ADMIN_EMAIL=21a@gmail.com
-ADMIN_SECRET_KEY=123456
+# ADMIN_EMAIL=21a@gmail.com
+# ADMIN_SECRET_KEY=123456
 DATABASE_URL="mongodb://localhost:27017/HVAC-demo"
+
+CLOUD_SECRET_KEY =atdClEsx214ikssCbTIzGANqhWA
+CLOUD_API_KEY =997961669838159
+CLOUD_NAME= dqqacx7uh
