--- a/Serverside/.env
+++ b/Serverside/.env
@@ -3,7 +3,7 @@ JWT_EXPIRATION = "3h"
 JWT_SECRET = HVAC-secrete
 # ADMIN_EMAIL=21a@gmail.com
 # ADMIN_SECRET_KEY=123456
-DATABASE_URL="mongodb://localhost:27017/HVAC-demo"
+DATABASE_URL="mongodb+srv://21aniketdhangar13:uKNCcC96OEOXiNQB@cluster0.hve4hgn.mongodb.net/"
 
 CLOUD_SECRET_KEY =atdClEsx214ikssCbTIzGANqhWA
 CLOUD_API_KEY =997961669838159
