--- a/Serverside/package.json
+++ b/Serverside/package.json
@@ -5,7 +5,11 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    
+  "server": "nodemon server.js"
+
+
   },
   "keywords": [],
   "author": "",
