--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "@reduxjs/toolkit": "^2.5.1",
     "@toolpad/core": "^0.12.0",
     "axios": "^1.8.4",
-    "dotenv": "^16.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
