--- a/Serverside/package.json
+++ b/Serverside/package.json
@@ -5,9 +5,9 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "server": "nodemon server.js"
+    "start": "node Server.js",
+    "dev": "nodemon Server.js",
+    "server": "nodemon Server.js"
   },
   "keywords": [],
   "author": "",
