--- a/Serverside/.env
+++ b/Serverside/.env
@@ -2,9 +2,11 @@ PORT = 3000
 
 JWT_EXPIRATION = "3h"
 JWT_SECRET = HVAC-secrete
-# ADMIN_EMAIL=21a@gmail.com
-# ADMIN_SECRET_KEY=123456
-DATABASE_URL="mongodb+srv://21aniketdhangar13:uKNCcC96OEOXiNQB@cluster0.hve4hgn.mongodb.net/"
+ADMIN_EMAIL=21a@gmail.com
+ADMIN_SECRET_KEY=123456
+# DATABASE_URL="mongodb+srv://21aniketdhangar13_db_user:shEzSAWzlgTecdj4@hvac-cluster.poeddig.mongodb.net/?appName=hvac-cluster"
+
+DATABASE_URL="mongodb://127.0.0.1:27017/yourDatabaseName"
 
 CLOUD_SECRET_KEY =atdClEsx214ikssCbTIzGANqhWA
 CLOUD_API_KEY =997961669838159
