--- a/Serverside/.env
+++ b/Serverside/.env
@@ -6,7 +6,7 @@ ADMIN_EMAIL=21a@gmail.com
 ADMIN_SECRET_KEY=123456
 # DATABASE_URL="mongodb+srv://21aniketdhangar13_db_user:shEzSAWzlgTecdj4@hvac-cluster.poeddig.mongodb.net/?appName=hvac-cluster"
 
-DATABASE_URL="mongodb+srv://database:Pass%40123@have.5mm5uyw.mongodb.net/myDatabase"
+DATABASE_URL="mongodb+srv://21aniketdhangar13:rSu7mu3IIFOSK7Iu@hvac-cluster.72kmb.mongodb.net/HVAC-DB"
 
 CLOUD_SECRET_KEY =atdClEsx214ikssCbTIzGANqhWA
 CLOUD_API_KEY =997961669838159
